chore: pin deps for Render (Streamlit only)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit
-firebase-admin
-python-dotenv
-google-generativeai
-fastapi
-uvicorn
-google-auth
-google-auth-oauthlib
-google-api-python-client
-googlemaps
-geopy
-folium
-streamlit-folium
+streamlit==1.51.0
+firebase-admin==7.1.0
+python-dotenv==1.0.1
+google-generativeai==0.8.5
+
+google-auth==2.43.0
+google-auth-oauthlib==1.2.3
+google-api-python-client==2.187.0
+
+googlemaps==4.10.0
+geopy==2.4.1
+folium==0.20.0
+streamlit-folium==0.25.3
